# swagger/swaggerui/dist/swagger.cpt.json
@@ -21,11 +21,11 @@
   "paths": {
     "/api/tasks": {
       "get": {
-        "description": "Get all task of the user. You need to specify the userId and taskId.",
+        "description": "Get all task without detail.",
         "tags": [
           "cpt"
         ],
-        "summary": "Get all tasks of the user (with id=userId).",
+        "summary": "Get all tasks.",
         "operationId": "swaggGetAllReq",
         "responses": {
           "200": {
@@ -37,7 +37,7 @@
         }
       },
       "post": {
-        "description": "Create a task. Also, you need to specify the userId and taskId.",
+        "description": "Create a task(Now only support questionnaire). The upload parameter needs to be a wrapper of model.Qtnr and has one extra field called \"kind\" which indicates the task type.",
         "tags": [
           "cpt"
         ],
@@ -48,7 +48,7 @@
             "name": "Body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/Task"
+              "$ref": "#/definitions/Qtnr"
             }
           }
         ],
@@ -64,7 +64,7 @@
     },
     "/api/tasks/{taskId}": {
       "get": {
-        "description": "Get the specical task. You need to specify the userId and taskId.",
+        "description": "Get the specical task with detail(Now only support questionnaire). You need to specify and taskId.",
         "tags": [
           "cpt"
         ],
@@ -87,11 +87,9 @@
             "$ref": "#/responses/swaggBadReq"
           }
         }
-      }
-    },
-    "/api/tasks/{taskId}?action={action}": {
+      },
       "put": {
-        "description": "Update the task information. Also, you need to specify the user ID and task ID.",
+        "description": "Update the task information(Now only support questionnaire). Also, you need to specify the taskId. The upload parameter needs to be a wrapper of model.Qtnr and has one extra field called \"kind\" which indicates the task type.",
         "tags": [
           "cpt"
         ],
@@ -106,17 +104,10 @@
             "required": true
           },
           {
-            "type": "string",
-            "description": "action can be one of \"release\", \"claim\" and \"finish\"",
-            "name": "action",
-            "in": "path",
-            "required": true
-          },
-          {
             "name": "Body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/Task"
+              "$ref": "#/definitions/Qtnr"
             }
           }
         ],
@@ -130,13 +121,13 @@
         }
       }
     },
-    "/api/users/{userId}/tasks/{taskId}?status={status}": {
+    "/api/tasks/{taskId}?state={state}": {
       "delete": {
-        "description": "When status is equal to \"non-released\" or \"finished\", it means the creator want to delete it. When status is equal to \"released\", it means the creator want to cancel to release it. When status is equal to \"claimed\", it means the recipient want to cancel to claim it. Also, you need to specify the user ID and task ID.",
+        "description": "When state is equal to \"non-released\" or \"closed\", it means the creator want to delete it. When state is equal to \"released\", it means the creator want to cancel to release it. Also, you need to specify the taskId.",
         "tags": [
           "cpt"
         ],
-        "summary": "Delete\\Cancel to Release\\Cancel to Claim a task.",
+        "summary": "Delete\\Cancel a task.",
         "operationId": "swaggDeleteReq",
         "parameters": [
           {
@@ -147,7 +138,7 @@
           },
           {
             "type": "string",
-            "description": "state can be one of \"non-released\", \"released\", \"claimed\" and \"finished\"",
+            "description": "state can be one of \"non-released\", \"released\" and \"closed\"",
             "name": "state",
             "in": "path",
             "required": true
@@ -165,26 +156,21 @@
     }
   },
   "definitions": {
-    "Task": {
+    "Qtnr": {
       "type": "object",
       "properties": {
-        "confirmFinish": {
-          "type": "boolean",
-          "x-go-name": "ConfirmFinish"
-        },
         "cutoff": {
           "type": "string",
           "format": "date-time",
           "x-go-name": "Cutoff"
         },
-        "enddate": {
-          "type": "string",
-          "format": "date-time",
-          "x-go-name": "Enddate"
-        },
         "id": {
           "type": "string",
           "x-go-name": "Id"
+        },
+        "kind": {
+          "type": "string",
+          "x-go-name": "Kind"
         },
         "pubdate": {
           "type": "string",
@@ -195,30 +181,92 @@
           "type": "string",
           "x-go-name": "Publisher"
         },
-        "recipient": {
-          "type": "string",
-          "x-go-name": "Recipient"
-        },
-        "recipientFinish": {
-          "type": "boolean",
-          "x-go-name": "RecipientFinish"
+        "qtnr": {
+          "$ref": "#/definitions/Questionnaire"
         },
         "restrain": {
+          "description": "Recipient       string    `json:\"recipient\"`",
           "type": "string",
           "x-go-name": "Restrain"
         },
         "reward": {
+          "description": "Enddate         time.Time `json:\"enddate\"`",
           "type": "number",
           "format": "double",
           "x-go-name": "Reward"
         },
         "state": {
+          "description": "RecipientFinish bool      `json:\"recipientFinish\" xorm:\"recipientFinish\"`\nConfirmFinish   bool      `json:\"confirmFinish\" xorm:\"confirmFinish\"`",
           "type": "string",
           "x-go-name": "State"
+        }
+      },
+      "x-go-package": "github.com/money-hub/MoneyDodo.service/model"
+    },
+    "Questionnaire": {
+      "type": "object",
+      "properties": {
+        "query": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/query"
+          },
+          "x-go-name": "Query"
         },
-        "type": {
+        "singleChoice": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/singleChoice"
+          },
+          "x-go-name": "SingleChoice"
+        },
+        "taskId": {
           "type": "string",
-          "x-go-name": "Type"
+          "x-go-name": "TaskId"
+        }
+      },
+      "x-go-package": "github.com/money-hub/MoneyDodo.service/model"
+    },
+    "Task": {
+      "type": "object",
+      "properties": {
+        "cutoff": {
+          "type": "string",
+          "format": "date-time",
+          "x-go-name": "Cutoff"
+        },
+        "id": {
+          "type": "string",
+          "x-go-name": "Id"
+        },
+        "kind": {
+          "type": "string",
+          "x-go-name": "Kind"
+        },
+        "pubdate": {
+          "type": "string",
+          "format": "date-time",
+          "x-go-name": "Pubdate"
+        },
+        "publisher": {
+          "type": "string",
+          "x-go-name": "Publisher"
+        },
+        "restrain": {
+          "description": "Recipient       string    `json:\"recipient\"`",
+          "type": "string",
+          "x-go-name": "Restrain"
+        },
+        "reward": {
+          "description": "Enddate         time.Time `json:\"enddate\"`",
+          "type": "number",
+          "format": "double",
+          "x-go-name": "Reward"
+        },
+        "state": {
+          "description": "RecipientFinish bool      `json:\"recipientFinish\" xorm:\"recipientFinish\"`\nConfirmFinish   bool      `json:\"confirmFinish\" xorm:\"confirmFinish\"`",
+          "type": "string",
+          "x-go-name": "State"
         }
       },
       "x-go-package": "github.com/money-hub/MoneyDodo.service/model"
@@ -237,11 +285,7 @@
           "x-go-name": "CertificationStatus"
         },
         "certifiedPic": {
-          "type": "array",
-          "items": {
-            "type": "integer",
-            "format": "uint8"
-          },
+          "type": "string",
           "x-go-name": "CertifiedPic"
         },
         "creditScore": {
@@ -276,6 +320,41 @@
         "sId": {
           "type": "string",
           "x-go-name": "SId"
+        }
+      },
+      "x-go-package": "github.com/money-hub/MoneyDodo.service/model"
+    },
+    "query": {
+      "type": "object",
+      "properties": {
+        "answer": {
+          "type": "string",
+          "x-go-name": "Answer"
+        },
+        "question": {
+          "type": "string",
+          "x-go-name": "Question"
+        }
+      },
+      "x-go-package": "github.com/money-hub/MoneyDodo.service/model"
+    },
+    "singleChoice": {
+      "type": "object",
+      "properties": {
+        "answer": {
+          "type": "string",
+          "x-go-name": "Answer"
+        },
+        "choices": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "x-go-name": "Choices"
+        },
+        "question": {
+          "type": "string",
+          "x-go-name": "Question"
         }
       },
       "x-go-package": "github.com/money-hub/MoneyDodo.service/model"
@@ -370,7 +449,7 @@
         "type": "object",
         "properties": {
           "data": {
-            "$ref": "#/definitions/Task"
+            "$ref": "#/definitions/Qtnr"
           },
           "errinfo": {
             "description": "Detailed error message",
